# Churn-Prediction-with-MLOps

./: .env.example  .gitignore  Makefile  README.md  create_structure.bat  docker-compose.yml  pyproject.toml  test_prediction.json
.github/workflows/: train-deploy.yml
data/processed/features/: customer_features.parquet
docker/mlflow/: Dockerfile
docker/postgres/: init.sql
docker/prefect/: Dockerfile
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: api_metrics.json  churn-prediction.json  dashboard.yml
monitoring/grafana/datasources/: datasources.yaml
scripts/: deploy_prefect_flows.py  download_data.py  feast_dashboard.py  prepare_feast_data.py  setup_feast.py  test_drift_detection.py  validate_data.py
src/api/: Dockerfile  dependencies.py  main.py  schemas.py
src/features/feature_repo/: .feastignore  __init__.py  feature_definitions.py  feature_store.yaml
src/models/: train.py
src/monitoring/: drift_detection.py  mlflow_exporter.py
src/pipelines/: training.py
tests/: conftest.py
tests/unit/: test_api.py
